RESOLVED FIXED306201
[Site Isolation] Fix WebLocks.LockRequestWaitingOnAnotherPageInSameProcess
https://bugs.webkit.org/show_bug.cgi?id=306201
Summary [Site Isolation] Fix WebLocks.LockRequestWaitingOnAnotherPageInSameProcess
Sihui Liu
Reported 2026-01-24 22:56:12 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-24 23:06:04 PST
Sihui Liu
Comment 2 2026-01-24 23:20:04 PST
EWS
Comment 3 2026-01-29 12:34:31 PST
Committed 306438@main (b5c988402057): <https://commits.webkit.org/306438@main> Reviewed commits have been landed. Closing PR #57195 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.